--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "DeFi Token Staking App",
   "author": "c-money",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.4",
+    "@mui/styled-engine-sc": "^5.11.0",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.3.1",
     "@types/react": "^17.0.14",
@@ -22,10 +27,10 @@
     "react": "^16.8.4",
     "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "16.8.4",
-    "react-particles-js": "^3.5.3",
     "react-scripts": "2.1.3",
     "react-tsparticles": "^1.31.2",
     "solc": "^0.8.6",
+    "styled-components": "^5.3.6",
     "truffle": "^5.1.39",
     "typescript": "^4.3.5",
     "web3": "1.2.11"
