--- a/.github/workflows/whatsapp-push-notify-action.yml
+++ b/.github/workflows/whatsapp-push-notify-action.yml
@@ -9,7 +9,7 @@ jobs:
         env:
           account_sid: ACb5f4ed773aa2d283fc179921ac3ffe4f
           auth_token: c27a9e9371f502777d8466ce2800abf3
-          to_whatsapp_no: 9924179232
+          to_whatsapp_no: +919924179232
 
 
         uses: ishween/whatsapp-push-notify-action@master
