--- a/package.json
+++ b/package.json
@@ -10,31 +10,25 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "@mui/styled-engine-sc": "^5.11.0",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.3.1",
-    "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
-    "babel-preset-stage-3": "6.24.1",
-    "babel-register": "6.26.0",
-    "bootstrap": "4.3.1",
-    "chai": "4.2.0",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "bootstrap": "5.2.3",
+    "chai": "4.3.7",
     "chai-as-promised": "7.1.1",
-    "chai-bignumber": "3.0.0",
+    "chai-bignumber": "3.1.0",
     "identicon.js": "^2.3.3",
-    "react": "^16.8.4",
-    "react-bootstrap": "1.0.0-beta.5",
-    "react-dom": "16.8.4",
-    "react-scripts": "2.1.3",
-    "react-tsparticles": "^1.31.2",
-    "solc": "^0.8.6",
+    "react": "^18.2.0",
+    "react-bootstrap": "2.7.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.7.1",
+    "solc": "^0.8.17",
     "styled-components": "^5.3.6",
-    "truffle": "^5.1.39",
-    "typescript": "^4.3.5",
-    "web3": "1.2.11"
+    "truffle": "^5.7.3",
+    "typescript": "^4.9.4",
+    "web3": "1.8.1"
   },
   "scripts": {
     "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
