--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "solc": "^0.8.17",
     "styled-components": "^5.3.6",
     "truffle": "^5.7.3",
+    "truffle-hdwallet-provider": "^1.0.17",
     "typescript": "^4.9.4",
     "web3": "1.8.1"
   },
